--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@
         height: 600px;
         background-size: cover;
         position: 50% 50%;
-        background-image: url(/images/hotel.jpg);
+        background-image: url('images/hotel.jpg');
     }
 
     .div{
